--- a/fraud-client/src/main/resources/application.properties
+++ b/fraud-client/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=fraud-client
+# Server port for the client application
+server.port=8091
+grpc.server.enabled=false
+
+# gRPC client configuration
+grpc.client.fraudService.address=static://${GRPC_SERVER_HOST:localhost}:${GRPC_SERVER_PORT:9090}
+grpc.client.fraudService.negotiation-type=plaintext
