--- a/fraud-service/build.gradle
+++ b/fraud-service/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.springframework.boot' version '3.4.3'
     id 'io.spring.dependency-management' version '1.1.7'
     id 'com.google.protobuf' version '0.9.4'
+    id 'maven-publish'  // This enables publishToMavenLocal
 }
 
 group = 'com.hugodesmarques'
@@ -56,6 +57,14 @@ sourceSets {
         java {
             srcDirs 'build/generated/source/proto/main/grpc'
             srcDirs 'build/generated/source/proto/main/java'
+        }
+    }
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {  // Defines a Maven publication
+            from components.java      // Publishes the Java components (JAR, POM, etc.)
         }
     }
 }
